--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 .footer {
-  border-top: gainsboro 1px solid;
-  font-family: 'Playfair Display', serif;
   position: fixed;
   bottom: 0;
+  background-color: #f8f9fa;
 }
