--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 .header {
-  border-bottom: gainsboro 1px solid;
+  background-color: white;
+  border-bottom: #f8f9fa 1px solid;
   width: 100%;
-  font-family: 'Playfair Display', serif;
+  z-index: 100;
 }
 
 .brand {
